2011-06-04 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-rig-ctrl.c:
    Attempt to fix bug #3272993: Issue controlling Yaesu FT-847.
    Coding style clean up.


2011-06-04 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-map.c
    * src/gtk-polar-view.c
    Reset satellite when reseting NAOS in sat-map and polar views.


2011-05-31 Charles Suprin <hamaa1vs at gmail.com>

    * src/sgpsdp/sgp_time.c
    * src/sgpsdp/sgp4sdp4.h
    * src/gtk-sat-module-tmg.c
    Fix discrepancy in year convention with Time_to_UTC between Julian_Date
    convention and mktime convention.
    Fixes Bug 3309110: 100% on manual time adjustment.
    Fixes part of Ubuntu Bug #789691.


2011-05-26 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-single-sat.c
    * src/config-keys.h
    * src/sat-cfg.c
    * src/sat-cfg.h
    * src/gtk-sat-module.c
    * src/gtk-single-sat.c
    Save selected satellite in single sat view.
    Part of Feature Request: 3179738


2011-05-14 Charles Suprin <hamaa1vs at gmail.com>

    * data/trsp/25338.trsp
    * data/trsp/26536.trsp
    * data/trsp/27543.trsp
    Update NOAA-15,-16,-17 transponder frequencies.


2011-05-01 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-module-popup.c
    * src/gtk-sat-module.c
    * src/gtk-sat-module.h
    * src/gtk-sat-list.c
    * src/gtk-sat-list.h
    * src/gtk-single-sat.c
    * src/gtk-single-sat.h
    * src/gtk-event-list.c
    * src/gtk-event-list.h
    * src/gtk-sat-map.c
    * src/gtk-sat-map.h
    * src/gtk-polar-view.c
    * src/gtk-polar-view.h
    New module menu item to allow selection of a satellite in all views at the
    same time. Related to feature request 3179102: Right click on satellite to
    add the track (probably the closest we can get to "global selection" without
    breaking the design).


2011-04-29 Alexandru Csete <oz9aec at gmail.com>

    * data/desktop/gpredict.desktop.in
    Fixed bug 3294829: Program name wrong in desktop files.
    
