@@ -1,3 +1,10 @@
+2011-06-05 Alexandru Csete <oz9aec at gmail.com>
+
+    * src/gtk-rig-ctrl.c:
+    Add TX cycle function for full duplex radios.
+    Fixes bug 3272993: Issue controlling Yaesu FT-847.
+
+
 2011-06-04 Alexandru Csete <oz9aec at gmail.com>
 
     * src/gtk-rig-ctrl.c:
